--- a/.github/workflows/daily_test.yml
+++ b/.github/workflows/daily_test.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         provider:
           - aws
-          # - azure
+          - azure
           - do
           - gcp
     steps:
@@ -31,12 +31,10 @@ jobs:
         run: ci/dependencies.sh
       - name: cli
         run: ci/cli.sh
-      - name: cli-update
-        run: sudo convox update
-      - name: install
-        run: ci/install.sh
+      - name: install last release
+        run: ci/install_last_release.sh
       - name: wait
-        run: sleep 600
+        run: sleep 300
       - name: test
         run: ci/test.sh
       - name: debug
